1.0.2:
    * Fix the tweak manager creating a class mapping for every loaded class, fixes #1.

1.0.1:
    * Fix errors when running in deobfuscated environment.

1.0.0:
    * Initial release